// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "Body": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
    },
    "render": [Function],
  },
  "Header": Object {
    "$$typeof": Symbol(react.forward_ref),
    "defaultProps": Object {
      "as": "div",
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "article",
  },
  "render": [Function],
}
`;

exports[`Message component should accept a react Element as renderAs prop 1`] = `
<p
  className="message"
>
  Custom
  This should be a p element
</p>
`;

exports[`Message component should concat Bulma class with classes in props 1`] = `
<article
  className="message other-class"
>
  <div
    className="message-header"
  >
    Lorem Ipsum
  </div>
  <div
    className="message-body"
  >
    Lorem Ipsum
  </div>
</article>
`;

exports[`Message component should have custom inline styles 1`] = `
<section
  className="message"
  style={
    Object {
      "width": 200,
      "zIndex": 1,
    }
  }
>
  This should be a section with custom styles
</section>
`;

exports[`Message component should have message classnames 1`] = `
<article
  className="message"
>
  <div
    className="message-header"
  >
    Lorem Ipsum
  </div>
  <div
    className="message-body"
  >
    Lorem Ipsum
  </div>
</article>
`;

exports[`Message component should render as an html section 1`] = `
<section
  className="message"
>
  This should be a section
</section>
`;
